k8s/00-namespace-configmap.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: markar
  labels:
    app: markar-intelligence
